# MOSAIC_adapted

./: .gitignore  README.md  pyproject.toml
DATA/raw/: clean_report.py  generate_meditation_reflections.py  generate_trial_200.py
DATA/trial/: README.md  generate_trial_data.py
notebooks/0_Check_data/: demographics.ipynb  preprocessing_sanitycheck.ipynb
notebooks/1_Run_pipeline/: MOSAIC_pipeline.ipynb  MOSAIC_pipeline_extended.ipynb
notebooks/2_Evaluation/: bootsrap_robustness.ipynb  compare_conditions_similarity.ipynb  optuna_check_eval.ipynb
src/mosaic/: __init__.py  grid_search.py  llama_CPP_custom.py  model.py  optuna_search.py  path_utils.py  utils.py
src/mosaic/configs/: dreamachine.py  template.py
src/mosaic/preprocessing/: preprocessing.py  translation_utils.py
